implement writing directory store